src/asset/mmdoc.css
:root {
  --light_background: white;
  --light_foreground: black;
  --light_lightest-gray: #f8f8f8;
  --light_light-gray: lightgray;
  --light_gray: gray;
  --light_orange: #FF9636;
  --light_yellow: #FFCD58;
  --light_green: #DAD870;
  --light_red: #FF5C4D;
  --light_link: black;

  --dark_background: #2b2b2b;
  --dark_foreground: #F5F5F5;
  --dark_light-gray: gray;
  --dark_lightest-gray: #2b2b2b;
  --dark_gray: lightgray;
  --dark_orange: #7c3b00;
  --dark_yellow: #896000;
  --dark_green: #69671b;
  --dark_red: #850b00;
  --dark_link: white;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: var(--dark_background);
    --foreground: var(--dark_foreground);
    --light-gray: var(--dark_light-gray);
    --lightest-gray: var(--dark_lightest-gray);
    --gray: var(--dark_gray);
    --orange: var(--dark_orange);
    --yellow: var(--dark_yellow);
    --green: var(--dark_green);
    --red: var(--dark_red);
    --link: var(--dark_link);
  }
}

:root.dark-theme {
  --background: var(--dark_background);
  --foreground: var(--dark_foreground);
  --light-gray: var(--dark_light-gray);
  --lightest-gray: var(--dark_lightest-gray);
  --gray: var(--dark_gray);
  --orange: var(--dark_orange);
  --yellow: var(--dark_yellow);
  --green: var(--dark_green);
  --red: var(--dark_red);
  --link: var(--dark_link);
}

@media (prefers-color-scheme: light) {
  :root {
    --background: var(--light_background);
    --foreground: var(--light_foreground);
    --light-gray: var(--light_light-gray);
    --lightest-gray: var(--light_lightest-gray);
    --gray: var(--light_gray);
    --orange: var(--light_orange);
    --yellow: var(--light_yellow);
    --green: var(--light_green);
    --red: var(--light_red);
    --link: var(--light_link);
  }
}

:root.light-theme {
  --background: var(--light_background);
  --foreground: var(--light_foreground);
  --light-gray: var(--light_light-gray);
  --lightest-gray: var(--light_lightest-gray);
  --gray: var(--light_gray);
  --orange: var(--light_orange);
  --yellow: var(--light_yellow);
  --green: var(--light_green);
  --red: var(--light_red);
  --link: var(--light_link);
}

:root {
  --topbar-height: 50px;
  color: var(--foreground);
  background-color: var(--background);
}

a {
  text-decoration-color: var(--light-gray);
  color: var(--foreground);
}

input {
  color: var(--foreground);
  background-color: var(--background);
}

html, body {
  overflow: hidden;
  height: 100vh;
  width: 100vw;
  margin: 0;
  padding: 0;

  line-height: 1.45;
  font-family: "Open Sans", sans-serif;
  background-color: var(--background);
}

.body {
  position: fixed;
  top: 0;
  margin: 0;

  height: 100%;
  width: 100%;

  display: grid;
  grid-template-columns: auto minmax(0, 1fr);
}

@media (any-pointer: fine) {
  .body {
    grid-template-areas:
        "navtop navtop"
        "search search"
        "sidebar main";
    grid-template-rows: var(--topbar-height) min-content auto;
  }
  .nav-top {
    border-bottom: 1px solid var(--light-gray);
  }
}

@media not (any-pointer: fine) {
  .body {
    grid-template-areas:
        "sidebar main"
        "navtop navtop"
        "search search";
    grid-template-rows: auto var(--topbar-height) min-content;
  }
  .nav-top {
    border-top: 1px solid var(--light-gray);
  }
}

input:checked + .body {
  grid-template-columns: auto minmax(0, 1fr);
}

input:checked + .body > nav.sidebar {
  display: none;
}

@media (max-width: 600px) {
  input:not(:checked) + .body > nav.sidebar {
    display: none;
  }
}

nav.sidebar {
  overflow: auto;
  grid-area: sidebar;
  max-width: 100ch;
  overflow: auto;
  padding: 5px;
  padding-right: 20px;
  border-right: 1px solid var(--light-gray);
}

nav ul ul {
  padding-left: 15px;
  list-style-type: none;
}

nav ul {
  padding-left: 0px;
  list-style-type: none;
}

.nav-chapter-previous:hover, .nav-chapter-next:hover {
  color: var(--gray);
}

.nav-chapter-previous {
  float: left;
}

.nav-chapter-next {
  float: right;
  right: 0;
}

.nav-top-container {
  grid-area: navtop;
  height: var(--topbar-height);
  background-color: var(--background);
}

.nav-top {
  display: grid;
  grid-template-columns:
      var(--topbar-height)
      var(--topbar-height)
      var(--topbar-height)
      var(--topbar-height)
      var(--topbar-height);
  height: var(--topbar-height);
  line-height: var(--topbar-height);
  overflow: hidden;
  grid-column-gap: 10px;
  border-bottom: 1px solid var(--light-gray);
}

.nav-top button, .nav-top a, .nav-top label {
    line-height: 50px;
    text-align: center;
    text-decoration: none;
    color: var(--light-gray);
    margin: 0;
    font-family: monospace;
    font-size: 50px;
    border: none;
    background-color: var(--background);
}

.nav-top button.emoji, .nav-top a.emoji {
    font-size: 30px;
}

.nav-top button:hover, .nav-top a:hover, .nav-top label:hover {
  color: var(--gray);
}

.sidebar-toggle, button.search-toggle, button.theme-toggle {
  cursor: pointer;
}

.nav-search {
  grid-area: search;
  padding: 5px;
  margin-left: auto;
  margin-right: auto;
  max-width: 80ch;
}

.search-visible nav.nav-search {
  display: block !important;
}

#search {
  width: 100%;
  font-size: 20px;
}

#search-results {
  overflow-y: auto;
  max-height: calc(60vh - var(--topbar-height));
}

#search-results ol {
  padding-bottom: 1em;
  border-bottom: 1px solid var(--light-gray);
}

section#main {
  grid-area: main;
  overflow: auto;
}

main {
  max-width: min(100vw, 80ch);
  padding: 0em 1em 20em 1em;
  margin-left: auto;
  margin-right: auto;
}

main .admonition {
  border-radius: 6px;
  padding: 0.5em 1em 0.5em 1em;
  margin: calc(1ex / 0.32) 0 0 0;
}

main .attention, main .caution, main .warning {
  background-color: var(--orange);
}

main .danger, main .error {
  background-color: var(--red);
}

main .hint, main .tip {
  background-color: var(--green);
}

main .important, main .note {
  background-color: var(--yellow);
}

main table, main th, main td {
  border: 2px solid var(--gray);
  border-collapse: collapse;
}

main th, main td {
  padding: 0.75em;
}

main h1:first-child, nav.sidebar > h1:first-child {
  margin-top: 0px;
  padding-top: 1rem;
}

main .admonition h3 {
    margin-top: 0;
}

main h1 {
    font-size: 2.5rem;
    line-height: calc(1ex / 0.42);
    margin-top: calc(1ex / 0.42);
}

main h2 {
    font-size: 2rem;
    line-height: calc(1ex / 0.42);
    margin-top: calc(1ex / 0.42);
}

main h3 {
    font-size: 1.75rem;
    line-height: calc(1ex / 0.38);
    margin-top: calc(1ex / 0.38);
}

main h4 {
    font-size: 1.5rem;
    line-height: calc(1ex / 0.37);
    margin-top: calc(1ex / 0.37);
}

main p {
  text-align: justify;
  font-size: 1rem;
  line-height: calc(1ex / 0.32);
  margin: calc(1ex / 0.32) 0 0 0;
}

main blockquote {
  border-left: 5px solid var(--light-gray);
  margin-left: 0px;
  padding-left: 10px;
  font-size: 20px;
}

code, code.hljs {
  display: inline;
  border-radius: 5px;
  padding: 2px;
  background: var(--lightest-gray);
}

pre code, pre code.hljs {
  display: block;
  padding: 10px;
  border-radius: 5px;
  border-color: var(--light-gray);
  border-style: solid;
  border-width: 1px;
  scrollbar-width: thin;
}

code.language-ShellSession .hljs-meta,
code.language-shellsession .hljs-meta,
code.language-Shell .hljs-meta,
code.language-shell .hljs-meta,
code.language-Console .hljs-meta,
code.language-console .hljs-meta {
  user-select: none;
}

